@@ -1,3 +1,7 @@
+2006-06-20  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* POTFILES.in: Update for new printing files.
+
 2006-06-15  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
